--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
 
     <script type="text/javascript" src="js/jquery-3.2.0.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
-    <title></title>
+    <title>Roman Numerals</title>
   </head>
   <body>
-    <div class="container">
-
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Roman Numerals</h1>
+      </div>
     </div>
+    <div class="container">
+      <form>
+        <label for="userInput">Enter a number:</label>
+        <input type="text" name="name" value="">
+        <button type="submit" name="button">DO IT</button>
+      </form>
+
+      <div class="output">
+
+      </div>
+    </div>
+
   </body>
 </html>
